# ESP_ChunFeng

./: CMakeLists.txt  clean_cursor_cache.bat  partitions.csv  sdkconfig.defaults
.cursor/rules/: xingnian.mdc
components/esp_coze_open/: CMakeLists.txt  README.md
components/esp_coze_open/examples/: basic_usage.c  chat_config_example.c
components/esp_coze_open/include/: esp_coze_audio_flash.h  esp_coze_chat.h  esp_coze_chat_config.h  esp_coze_events.h  esp_coze_ring_buffer.h
components/esp_coze_open/src/: esp_coze_audio_flash.c  esp_coze_chat.c  esp_coze_chat_config.c  esp_coze_events.c  esp_coze_ring_buffer.c
components/lottie/: CMakeLists.txt  lottie_manager.c  lottie_manager.h  lottie_test.c  lottie_test.h
components/lvgl_ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c
components/lvgl_ui/fonts/: ui_font_pingfang26.c
components/lvgl_ui/gif/: loading_4802_256.c
components/lvgl_ui/screens/: ui_Screen1.c  ui_Screen1.h  ui_ScreenMain.c  ui_ScreenStart.c
components/opus_audio/: CMakeLists.txt
components/opus_audio/include/: opus_audio_decoder.h
components/opus_audio/src/: opus_audio_decoder.c
cursor_backup_周一 22509/: settings.json
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  lottie_manager.c  lottie_manager.h  lottie_test.c  main.c  main.cpp  test_official_driver.c
main/Audio/: audio_hal.c  audio_hal.h  audio_player.c  audio_player.h  button_voice.c  button_voice.h
main/Audio_Driver/: PCM5101.c  PCM5101.h
main/BAT_Driver/: BAT_Driver.c  BAT_Driver.h
main/EXIO/: TCA9554PWR.c  TCA9554PWR.h
main/I2C_Driver/: I2C_Driver.c  I2C_Driver.h
main/LCD_Driver/: Display_SPD2010.c  Display_SPD2010.h  Display_SPD2010_Official.c  Display_SPD2010_Official.h
main/LCD_Driver/esp_lcd_spd2010/: esp_lcd_spd2010.c  esp_lcd_spd2010.h
main/LVGL_Driver/: LVGL_Driver.c  LVGL_Driver.h
main/LVGL_UI/: LVGL_Example.h  LVGL_Music.h
main/MIC_Driver/: MIC_Speech.h
main/PCF85063/: PCF85063.h
main/PWR_Key/: PWR_Key.c  PWR_Key.h
main/QMI8658/: QMI8658.h
main/SD_Card/: SD_MMC.h
main/Touch_Driver/: Touch_SPD2010.c  Touch_SPD2010.h  Touch_SPD2010_Official.c  Touch_SPD2010_Official.h
main/Wireless/: http_server.c  http_server.h  wifi_manager.c  wifi_manager.h
main/coze_chat/: 1  coze_chat.c  coze_chat.h  coze_chat_app.c  coze_chat_app.h
main/spiffs/: WiFi_Connecting.json  mic.json  rabbit.json  speak.json  wifi_loading.json
squareline_chunfeng/: SquareLine_Project.sll  SquareLine_Project.spj  SquareLine_Project_events.py
squareline_chunfeng/assets/: ui_font_MiSansBold16.fcfg
squareline_chunfeng/doc/: 常用汉字
squareline_chunfeng/ui_out/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h
squareline_chunfeng/ui_out/fonts/: ui_font_MiSansBold16.c
squareline_chunfeng/ui_out/screens/: ui_Screen1.c  ui_ScreenStart.c
