idf_component_register(
       SRCS
              "main.c"
              "Wireless/wifi_manager.c"
              "Wireless/http_server.c"
              "Audio/audio_hal.c"
              "Audio/audio_player.c"
              "Audio/button_voice.c"
              "coze_chat/coze_chat.c"
              "LCD_Driver/Display_SPD2010_Official.c"    
              "LVGL_Driver/LVGL_Driver.c"
              "Touch_Driver/Touch_SPD2010_Official.c"
              "EXIO/TCA9554PWR.c"
              "I2C_Driver/I2C_Driver.c"
              "PWR_Key/PWR_Key.c"
       PRIV_REQUIRES
              fatfs
              spi_flash
              esp_timer
              esp_wifi
              nvs_flash
              esp_http_server
              spiffs
              json
              driver
              esp_http_client
              esp_websocket_client
              esp_coze_open
              esp_lcd
              lvgl_ui
              espressif__esp_lcd_spd2010
              espressif__esp_lcd_touch_spd2010
              lottie

       INCLUDE_DIRS
              "."
              "Wireless"
              "Audio"
              "coze_chat"              
              "LCD_Driver"         
              "LVGL_Driver"
              "Touch_Driver"
              "EXIO"
              "I2C_Driver"
              "PWR_Key"
       WHOLE_ARCHIVE TRUE
       EMBED_FILES 
)

spiffs_create_partition_image(spiffs_data "./spiffs" FLASH_IN_PROJECT)
